# PotyStack

./: .gitignore  404.html  README.md
.github/workflows/: ci.yml
Aulas/Back End/aula_01/: index.html
Aulas/Back End/aula_02/: index.html
diagramas/: .$TamoJunto.drawio.bkp  TamoJunto.drawio
search/: search_index.json
source-docs/: mkdocs.yml  pyproject.toml
source-docs/docs/: index.md  tamo-junto.md
source-docs/docs/Aulas/Back End/: aula_01.md  aula_02.md
source-docs/site/: index.html
source-docs/site/Aulas/Back End/aula_01/: index.html
source-docs/site/Aulas/Back End/aula_02/: index.html
source-docs/site/search/: search_index.json
tamo-junto/: index.html
